Revert "Merge branch 'main' of github.com:LuEnCam/CashRegister"
This reverts commit 4d0296c47702f0c38a41cbea6e8e2df75f4b88b0, reversing
changes made to c96a2b4af5a96704322e2b197f974ffdeeea9a1c.

--- a/CashRegister/CashRegister/MainPage.xaml
+++ b/CashRegister/CashRegister/MainPage.xaml
@@ -6,7 +6,7 @@
 
     <StackLayout BackgroundColor="White" Padding="60" VerticalOptions="Center">
         <Button Text="Second Page" BackgroundColor="Blue" Clicked="NavigateButton_OnClicked"/>
-        <Button Text="Click" BackgroundColor="Green" x:Name="btnScan" Clicked="btnScan_Clicked"/>
+        <Button Text="Click" x:Name="btnScan" Clicked="btnScan_Clicked"/>
         <Entry x:Name="txtBarcode" Placeholder="Text Do scan"/>
     </StackLayout>
 </ContentPage>
