--- a/CashRegister/CashRegister/MainPage.xaml
+++ b/CashRegister/CashRegister/MainPage.xaml
@@ -7,6 +7,7 @@
     <StackLayout BackgroundColor="White" Padding="60" VerticalOptions="Center">
         <Button Text="Second Page" BackgroundColor="Blue" Clicked="NavigateButton_OnClicked"/>
         <Button Text="Click" x:Name="btnScan" Clicked="btnScan_Clicked"/>
-        <Entry x:Name="txtBarcode" Placeholder="Text Do scan"/>
+        <Entry x:Name="txtBarcode" Placeholder="Barcode" BackgroundColor="Black" TextColor="AntiqueWhite"/>
+        <Entry x:Name="txtArticleDescr" Placeholder="Description" BackgroundColor="Black" TextColor="AntiqueWhite"/>
     </StackLayout>
 </ContentPage>
