--- a/CashRegister/CashRegister/MainPage.xaml
+++ b/CashRegister/CashRegister/MainPage.xaml
@@ -5,6 +5,8 @@
              x:Class="CashRegister.MainPage">
 
     <StackLayout BackgroundColor="White" Padding="60" VerticalOptions="Center">
+        <Button Text="Add Test User to Database" x:Name="btnTestAddUser" Clicked="btnTestAddUser_Clicked"/>
+        <Button Text="Show users from Database" x:Name="btnShowUser" Clicked="btnShowUsers_Clicked"/>
         <Button Text="Second Page" BackgroundColor="Blue" Clicked="NavigateButton_OnClicked"/>
         <Button Text="Click" x:Name="btnScan" Clicked="btnScan_Clicked"/>
         <Entry x:Name="txtBarcode" Placeholder="Text Do scan"/>
