--- a/CashRegister/CashRegister/View/CashRegisterView.xaml
+++ b/CashRegister/CashRegister/View/CashRegisterView.xaml
@@ -32,7 +32,7 @@
                         <StackLayout BindableLayout.ItemsSource="{Binding Categories}" Spacing="4"  Orientation="Horizontal">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Text="{Binding Name}" Clicked="SelectCategory" BackgroundColor="{Binding Color}" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
+                                    <Button Text="{Binding Name}" Clicked="SelectCategory" BackgroundColor="{Binding ActualColor}" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
                         </StackLayout>
@@ -43,7 +43,7 @@
                         <FlexLayout Direction="Row" Wrap="Wrap" JustifyContent="Start" AlignItems="Start" VerticalOptions="Start" BindableLayout.ItemsSource="{Binding Items}">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Text="{Binding Name}" Clicked="SelectItem" BackgroundColor="AntiqueWhite" Margin="4" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
+                                    <Button Text="{Binding Name}" Clicked="SelectItem" BackgroundColor="{Binding Category.ActualColor}" Margin="4" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
                         </FlexLayout>
