--- a/CashRegister/CashRegister/View/SignupView.xaml
+++ b/CashRegister/CashRegister/View/SignupView.xaml
@@ -6,6 +6,7 @@
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <Entry Placeholder="Email" x:Name="Email" Keyboard="Email"/>
             <Entry Placeholder="Password" x:Name="Pass" IsPassword="true"/>
+            <Entry Placeholder="Password confirmation" x:Name="PassConf" IsPassword="true"/>
             <Entry Placeholder="First Name" x:Name="FirstName"/>
             <Entry Placeholder="Last Name" x:Name="LastName"/>
             <Button Text="Sign up" Clicked="Signup"></Button>
