--- a/CashRegister/CashRegister/View/MainMenuView.xaml
+++ b/CashRegister/CashRegister/View/MainMenuView.xaml
@@ -1,23 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CashRegister.View.MainMenuView">
+             x:Class="CashRegister.View.MainMenuView"
+             BackgroundColor="White">
+    
     <ContentPage.Content>
         <Frame BackgroundColor="White" HorizontalOptions="Center" VerticalOptions="Center">
             <StackLayout Orientation="Vertical">
-                <Label Text="Main menu" FontSize="32"/>
+                <Label Style="{StaticResource TitleLabel}" Text="Main menu"/>
 
-                <Button Text="[Debug] Add user to DB" x:Name="AddUserButton" Clicked="AddUser"/>
-                <Button Text="[Debug] Show users from DB" x:Name="ShowUsersButton" Clicked="ShowUsers"/>
+                <Button Style="{StaticResource DefaultButton}" Text="[Debug] Add user to DB" x:Name="AddUserButton" Clicked="AddUser"/>
+                <Button Style="{StaticResource DefaultButton}" Text="[Debug] Show users from DB" x:Name="ShowUsersButton" Clicked="ShowUsers"/>
 
                 <Label HeightRequest="50"/>
-                <Button Text="To Statistics" Clicked="ToStatistics"/>
-                <Button Text="To Cash register" Clicked="ToCashRegister"/>
+                <Button Style="{StaticResource DefaultButton}" Text="To Statistics" Clicked="ToStatistics"/>
+                <Button Style="{StaticResource DefaultButton}" Text="To Cash register" Clicked="ToCashRegister"/>
                 <Label HeightRequest="50"/>
 
-                <Button Text="[Debug] Scan" x:Name="ScanButton" Clicked="Scan"/>
-                <Entry x:Name="txtBarcode" Placeholder="Barcode" BackgroundColor="AntiqueWhite" TextColor="Black"/>
-                <Entry x:Name="txtArticleDescr" Placeholder="Description" BackgroundColor="AntiqueWhite" TextColor="Black"/>
+                <Button Style="{StaticResource DefaultButton}" Text="[Debug] Scan" x:Name="ScanButton" Clicked="Scan"/>
+                <Entry x:Name="txtBarcode" Placeholder="Barcode"/>
+                <Entry x:Name="txtArticleDescr" Placeholder="Description" />
             </StackLayout>
         </Frame>
     </ContentPage.Content>
