--- a/CashRegister/CashRegister/MainPage.xaml
+++ b/CashRegister/CashRegister/MainPage.xaml
@@ -2,15 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:CashRegister"
-             x:Class="CashRegister.MainPage">
+             x:Class="CashRegister.MainPage"
+             BackgroundColor="White">
 
-    <Frame HorizontalOptions="Center" VerticalOptions="Center" CornerRadius="16">
+    <Frame BackgroundColor="White" HorizontalOptions="Center" VerticalOptions="Center" CornerRadius="16">
         <StackLayout Orientation="Vertical">
-            <Label Text="Cas# Register" FontSize="50" Margin="16"/>
-            <Button Text="Sign up" x:Name="SignupButton" Clicked="ToSignup"/>
-            <Button Text="Login" x:Name="LoginButton" Clicked="ToLogin"/>
-            <Button Text="Logout" x:Name="LogoutButton" Clicked="Logout"/>
-            <Button Text="[Debug] Default login" x:Name="DefaultLoginButton" Clicked="DefaultLogin"/>
+            <Label Style="{StaticResource TitleLabel}" Text="Cas# Register" Margin="16"/>
+            <Button Style="{StaticResource DefaultButton}" Text="Sign up" x:Name="SignupButton" Clicked="ToSignup"/>
+            <Button Style="{StaticResource DefaultButton}" Text="Login" x:Name="LoginButton" Clicked="ToLogin"/>
+            <Button Style="{StaticResource DefaultButton}" Text="Logout" x:Name="LogoutButton" Clicked="Logout"/>
+            <Button Style="{StaticResource DefaultButton}" Text="[Debug] Default login" x:Name="DefaultLoginButton" Clicked="DefaultLogin"/>
         </StackLayout>
     </Frame>
 </ContentPage>
