--- a/CashRegister/CashRegister/View/StatisticsView.xaml
+++ b/CashRegister/CashRegister/View/StatisticsView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:CashRegister.ViewModel"
-             x:Class="CashRegister.View.StatisticsView">
+             x:Class="CashRegister.View.StatisticsView"
+             BackgroundColor="White">
     <ContentPage.BindingContext>
         <local:StatisticsViewModel />
     </ContentPage.BindingContext>
@@ -17,10 +18,10 @@
             </Grid.RowDefinitions>
 
             <!-- Date -->
-            <Label Grid.Row="0" Text="{Binding Date, StringFormat='{0:MMMM dd, yyyy}'}" FontSize="32"/>
+            <Label Style="{StaticResource TitleLabel}" Grid.Row="0" Text="{Binding Date, StringFormat='{0:MMMM dd, yyyy}'}"/>
 
             <!-- Chiffre d'affaire -->
-            <Label Grid.Row="1" Text="{Binding TotalIncome, StringFormat='Total income of the day: {0:0.00} .-'}" FontSize="18"/>
+            <Label Style="{StaticResource BigLabel}" Grid.Row="1" Text="{Binding TotalIncome, StringFormat='Total income of the day: {0:0.00} .-'}"/>
 
             <!-- Categories -->
             <ScrollView Grid.Row="3" Orientation="Vertical">
@@ -36,8 +37,8 @@
                                             <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <Label Grid.Column="0" Text="{Binding Category.Name}"/>
-                                        <Label Grid.Column="1" Text="{Binding TotalIncome, StringFormat='{0:0.00} .-'}"/>
+                                        <Label Style="{StaticResource DefaultLabel}" Grid.Column="0" Text="{Binding Category.Name}"/>
+                                        <Label Style="{StaticResource DefaultLabel}" Grid.Column="1" Text="{Binding TotalIncome, StringFormat='{0:0.00} .-'}"/>
                                     </Grid>
                                 </Frame>
                                 
@@ -45,7 +46,7 @@
                                 <StackLayout Orientation="Vertical" BindableLayout.ItemsSource="{Binding BestItems}" Spacing="4">
                                     <BindableLayout.ItemTemplate>
                                         <DataTemplate>
-                                            <Label Text="{Binding Name, StringFormat='            {0}'}"/>
+                                            <Label Style="{StaticResource DefaultLabel}" Text="{Binding Name, StringFormat='            {0}'}"/>
                                         </DataTemplate>
                                     </BindableLayout.ItemTemplate>
                                 </StackLayout>
