--- a/CashRegister/CashRegister/View/SignupView.xaml
+++ b/CashRegister/CashRegister/View/SignupView.xaml
@@ -13,8 +13,7 @@
             <Entry Placeholder="First Name" x:Name="FirstName"/>
             <Entry Placeholder="Last Name" x:Name="LastName"/>
             <Picker x:Name="RolePicker"/>
-            <Button Style="{StaticResource DefaultButton}" Text="Sign up" Clicked="Signup"></Button>
-            <Button Style="{StaticResource DefaultButton}" Text="Already have an account ?" Clicked="ToLogin"></Button>
+            <Button Style="{StaticResource DefaultButton}" Text="Sign up" Clicked="Signup"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
