--- a/CashRegister/CashRegister/View/MainMenuView.xaml
+++ b/CashRegister/CashRegister/View/MainMenuView.xaml
@@ -18,8 +18,8 @@
                 <Label HeightRequest="50"/>
 
                 <Button Style="{StaticResource DefaultButton}" Text="[Debug] Scan" x:Name="ScanButton" Clicked="Scan"/>
-                <Entry x:Name="txtBarcode" Placeholder="Barcode"/>
-                <Entry x:Name="txtArticleDescr" Placeholder="Description" />
+                <Entry x:Name="txtBarcode" Placeholder="Barcode" BackgroundColor="Black" TextColor="White"/>
+                <Entry x:Name="txtArticleDescr" Placeholder="Description" BackgroundColor="Black" TextColor="White" />
             </StackLayout>
         </Frame>
     </ContentPage.Content>
